started porting tests to maven
--HG--
rename : flies-web-test/src/test/org/fedorahosted/flies/core/rest/ProjectResourceTest.java => flies-war/src/test/java/org/fedorahosted/flies/core/rest/ProjectResourceTest.java
rename : flies-web-test/src/test/org/fedorahosted/flies/repository/model/DocumentTests.java => flies-war/src/test/java/org/fedorahosted/flies/repository/model/DocumentTests.java
rename : flies-web-test/src/test/org/fedorahosted/flies/test/model/PersonTests.java => flies-war/src/test/java/org/fedorahosted/flies/test/model/PersonTests.java
rename : flies-web-test/src/test/AllTests.tng.xml => flies-war/src/test/resources/AllTests.tng.xml
rename : flies-web-test/src/test/flies-ds.xml => flies-war/src/test/resources/flies-ds.xml
rename : flies-web-test/src/test/import.sql => flies-war/src/test/resources/import.sql
rename : flies-web-test/src/test/org/fedorahosted/flies/repository/model/ProjectsBaseData.dbunit.xml => flies-war/src/test/resources/org/fedorahosted/flies/repository/model/ProjectsBaseData.dbunit.xml
rename : flies-web-test/src/test/org/fedorahosted/flies/test/model/FliesBaseData.dbunit.xml => flies-war/src/test/resources/org/fedorahosted/flies/test/model/FliesBaseData.dbunit.xml
rename : flies-web-test/src/test/readme.txt => flies-war/src/test/resources/readme.txt