@@ -30,14 +30,50 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
     </dependencies>
-  
-    
   </dependencyManagement>
 
   <build>
+
     <finalName>flies</finalName>
+
+    <plugins>
+
+      <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>javax.xml.bind</groupId>
+                  <artifactId>jaxb-api</artifactId>
+                  <version>2.1</version>
+                </artifactItem>
+              </artifactItems>
+              <outputDirectory>${project.build.testOutputDirectory}/endorsed</outputDirectory>
+            </configuration>
+            <id>download-jaxb-api</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+  
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <childDelegation>true</childDelegation>
+          <useSystemClassLoader>true</useSystemClassLoader>
+          <argLine>-Djava.endorsed.dirs=${project.build.testOutputDirectory}/endorsed -Dsun.lang.ClassLoader.allowArraySyntax=true</argLine>
+        </configuration>
+      </plugin>
+
+    </plugins>    
+        
   </build>
   
   <dependencies>
